Rename plugin, add functionliaty for harder inventory.

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
+displayName=Harder PvM
+author=Woohoojin
+description=This plugin contains fun toggles which only serve to increase the users' frustration during PvM. Use at your own risk.
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.harderpvm.HarderPvMPlugin
