Rename to generic plugin name, add functionality for delve boss poison tracking

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Harder PvM
+displayName=Hooj Plugins
 author=Woohoojin
-description=This plugin contains fun toggles which only serve to increase the users' frustration during PvM. Use at your own risk.
+description=
 tags=
-plugins=com.harderpvm.HarderPvMPlugin
+plugins=com.hoojplugins.HoojPlugins
